# num-peek

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  RELEASE.md  cli_help.txt  dprint.json
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: demo.npy  demo_float.npy
scripts/: build_release.sh  npy_create.py  npy_definitions.json
src/: analyze.rs  main.rs  present.rs
tests/: cli.rs
tests/snapshots/: cli__bool_snapshot.snap  cli__cli_help_output.snap  cli__cli_run_float.snap  cli__cli_run_int.snap  cli__float16_snapshot.snap  cli__float32_snapshot.snap  cli__float64_snapshot.snap  cli__int16_snapshot.snap  cli__int32_snapshot.snap  cli__int64_snapshot.snap  cli__int8_snapshot.snap  cli__string_snapshot.snap  cli__uint16_snapshot.snap  cli__uint32_snapshot.snap  cli__uint64_snapshot.snap  cli__uint8_snapshot.snap
