[package]
name = "num-peek"
version = "0.1.1"
authors = ["Peter Morgenstern <mail@petergundel.de>"]
edition = "2024"
homepage = "https://github.com/peterfication/num-peek"
license = "MIT"
readme = "README.md"
repository = "https://github.com/peterfication/num-peek"
description = "A CLI tool that can peek into `*.npy` files."

[dependencies]
byte-unit = "5.1.6"
clap = { version = "4.5.47", features = ["derive"] }
npyz = "0.8.4"
ordered-float = "5.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = "1.43.2"
